Upload new heatmap

--- a/master_study/analysis/analysis_opt_flathv_75_1500_withBB_chroma15_1p4.ipynb
+++ b/master_study/analysis/analysis_opt_flathv_75_1500_withBB_chroma15_1p4.ipynb
@@ -24,6 +24,8 @@
     "matplotlib.rcParams[\"font.weight\"] = \"light\"\n",
     "import matplotlib_inline\n",
     "matplotlib_inline.backend_inline.set_matplotlib_formats('retina')\n",
+    "%config InlineBackend.figure_format='retina'\n",
+    "\n",
     "STUDY_NAME = \"opt_flathv_75_1500_withBB_chroma15_1p4\"\n",
     "\n",
     "\n",
