Large update to incorporate tune footprint analysis for all bunches

--- a/master_study/analysis/clustering_filling_schemes.ipynb
+++ b/master_study/analysis/clustering_filling_schemes.ipynb
@@ -218,6 +218,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export list of bunches (e.g. to compute DA for each bunch)\n",
+    "bbs.to_csv(\"8b4e_1972b_1960_1178_1886_224bpi_12inj_800ns_bs200ns_bbs.csv\", index_label=\"bunch number\")"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
