--- a/master_study/analysis/notebooks/analysis_opt_flathv_75_1500_withBB_chroma15_b1891_octscan.ipynb
+++ b/master_study/analysis/notebooks/analysis_opt_flathv_75_1500_withBB_chroma15_b1891_octscan.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_782937/1383647671.py:8: DeprecationWarning: Please use `gaussian_filter` from the `scipy.ndimage` namespace, the `scipy.ndimage.filters` namespace is deprecated.\n",
+      "/tmp/ipykernel_101470/2299441326.py:8: DeprecationWarning: Please use `gaussian_filter` from the `scipy.ndimage` namespace, the `scipy.ndimage.filters` namespace is deprecated.\n",
       "  from scipy.ndimage.filters import gaussian_filter\n"
      ]
     }
@@ -49,7 +49,7 @@
     "\n",
     "# Define study\n",
     "STUDY_NAME = \"opt_flathv_75_1500_withBB_chroma15_b1891_octscan\"\n",
-    "SAVE_STUDY_EOS = False\n",
+    "SAVE_STUDY_EOS = True\n",
     "\n",
     "# Function to generate animations\n",
     "def mpl_fig2array(plt):\n",
@@ -65,88 +65,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save study in an archive on EOS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if SAVE_STUDY_EOS:\n",
-    "    path_study = \"/afs/cern.ch/work/c/cdroin/private/DA_study/master_study/\"\n",
-    "    l_path = [\n",
-    "        path_study + \"001_make_folders_scanoct.py\",\n",
-    "        path_study + \"002_chronjob.py\",\n",
-    "        path_study + \"003_postprocessing.py\",\n",
-    "        path_study + \"analysis/notebooks/analysis_opt_flathv_75_1500_withBB_chroma15_b1891_octscan.ipynb\",\n",
-    "    ]\n",
-    "    # Recursively add to l_path all the files in path_study + \"master_jobs\" and subfolders\n",
-    "    for path, subdirs, files in os.walk(path_study + \"master_jobs\"):\n",
-    "        for name in files:\n",
-    "            l_path.append(os.path.join(path, name))\n",
-    "\n",
-    "    # Same with path_study + \"opt_flathv_75_1500_withBB_chroma15_b1891_octscan\"\n",
-    "    for path, subdirs, files in os.walk(path_study + \"opt_flathv_75_1500_withBB_chroma15_b1891_octscan\"):\n",
-    "        for name in files:\n",
-    "            l_path.append(os.path.join(path, name))\n",
-    "\n",
-    "    # Convert to a set of files that must not be ignored\n",
-    "    set_files_to_keep = set([x.split(\"/\")[-1] for x in l_path])\n",
-    "\n",
-    "    # defining the function to ignore the files\n",
-    "    # if present in any folder\n",
-    "    def ignore_files(dir, files):\n",
-    "        return [f for f in files if os.path.isfile(os.path.join(dir, f)) and f not in set_files_to_keep]\n",
-    "    \n",
-    "    # # calling the shutil.copytree() method and\n",
-    "    # # passing the src,dst,and ignore parameter\n",
-    "    # ! the file must be outside of path_study, otherwise it will be recursively copied\n",
-    "    # ! Copying from EOS is a very lenghty process\n",
-    "    path_EOS = \"/eos/home-c/cdroin/save_simulations/\"\n",
-    "    path_archive = path_EOS + STUDY_NAME\n",
-    "    shutil.copytree(path_study,\n",
-    "                    path_archive,\n",
-    "                    ignore=ignore_files)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if SAVE_STUDY_EOS:\n",
-    "    # Convert the archive to a zip file, and export to EOS\n",
-    "    shutil.make_archive(path_archive,\n",
-    "                        'zip',\n",
-    "                        path_EOS,\n",
-    "                        path_archive.split('/')[-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if SAVE_STUDY_EOS:\n",
-    "    # Delete the archive\n",
-    "    shutil.rmtree(path_archive)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Load data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +261,7 @@
        "[754 rows x 7 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +962,7 @@
        "[22 rows x 35 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1278,112 +1202,84 @@
     }
    ],
    "source": [
-    "path_study = \"/afs/cern.ch/work/c/cdroin/private/DA_study/master_study/\"\n",
-    "l_path = [\n",
-    "    path_study + \"001_make_folders_scanoct.py\",\n",
-    "    path_study + \"002_chronjob.py\",\n",
-    "    path_study + \"003_postprocessing.py\",\n",
-    "    path_study + \"analysis/notebooks/analysis_opt_flathv_75_1500_withBB_chroma15_b1891_octscan.ipynb\",\n",
-    "]\n",
-    "# Recursively add to l_path all the files in path_study + \"master_jobs\" and subfolders\n",
-    "for path, subdirs, files in os.walk(path_study + \"master_jobs\"):\n",
-    "    for name in files:\n",
-    "        l_path.append(os.path.join(path, name))\n",
+    "if SAVE_STUDY_EOS:\n",
     "\n",
-    "# Same with path_study + \"opt_flathv_75_1500_withBB_chroma15_b1891_octscan\"\n",
-    "for path, subdirs, files in os.walk(path_study + \"opt_flathv_75_1500_withBB_chroma15_b1891_octscan\"):\n",
-    "    for name in files:\n",
-    "        l_path.append(os.path.join(path, name))\n",
+    "    path_study = \"/afs/cern.ch/work/c/cdroin/private/DA_study/master_study/\"\n",
+    "    l_path = [\n",
+    "        path_study + \"001_make_folders_scanoct.py\",\n",
+    "        path_study + \"002_chronjob.py\",\n",
+    "        path_study + \"003_postprocessing.py\",\n",
+    "        path_study + \"analysis/notebooks/analysis_opt_flathv_75_1500_withBB_chroma15_b1891_octscan.ipynb\",\n",
+    "    ]\n",
+    "    # Recursively add to l_path all the files in path_study + \"master_jobs\" and subfolders\n",
+    "    for path, subdirs, files in os.walk(path_study + \"master_jobs\"):\n",
+    "        for name in files:\n",
+    "            l_path.append(os.path.join(path, name))\n",
     "\n",
-    "# Convert to a set of files that must not be ignored\n",
-    "set_files_to_keep = set([x.split(\"/\")[-1] for x in l_path])\n",
-    "directory_to_ignore = [\"/afs/cern.ch/work/c/cdroin/private/DA_study/master_study/opt_flathv_75_1500_withBB_chroma15_1p4_all_bunches\"]\n",
+    "    # Same with path_study + \"opt_flathv_75_1500_withBB_chroma15_b1891_octscan\"\n",
+    "    for path, subdirs, files in os.walk(path_study + \"opt_flathv_75_1500_withBB_chroma15_b1891_octscan\"):\n",
+    "        for name in files:\n",
+    "            l_path.append(os.path.join(path, name))\n",
     "\n",
-    "# defining the function to ignore the files\n",
-    "# if present in any folder\n",
-    "def ignore_files(dir, files):\n",
-    "    l_files_to_ignore = []\n",
-    "    for f in files:\n",
-    "        path_file = os.path.join(dir, f)\n",
+    "    # Convert to a set of files that must not be ignored\n",
+    "    set_files_to_keep = set([x.split(\"/\")[-1] for x in l_path])\n",
+    "    directory_to_ignore = [\"/afs/cern.ch/work/c/cdroin/private/DA_study/master_study/opt_flathv_75_1500_withBB_chroma15_1p4_all_bunches\"]\n",
     "\n",
-    "        # Ignore directories explicitely specified\n",
-    "        if path_file in directory_to_ignore:\n",
-    "            l_files_to_ignore.append(f)\n",
+    "    # defining the function to ignore the files\n",
+    "    # if present in any folder\n",
+    "    def ignore_files(dir, files):\n",
+    "        l_files_to_ignore = []\n",
+    "        for f in files:\n",
+    "            path_file = os.path.join(dir, f)\n",
     "\n",
-    "        # Don't ignore files explicitely specified\n",
-    "        if os.path.isfile(os.path.join(dir, f)) and f not in set_files_to_keep:\n",
-    "            l_files_to_ignore.append(f)\n",
+    "            # Ignore directories explicitely specified\n",
+    "            if path_file in directory_to_ignore:\n",
+    "                l_files_to_ignore.append(f)\n",
     "\n",
-    "    return l_files_to_ignore\n",
-    " \n",
+    "            # Don't ignore files explicitely specified\n",
+    "            if os.path.isfile(os.path.join(dir, f)) and f not in set_files_to_keep:\n",
+    "                l_files_to_ignore.append(f)\n",
     "\n",
-    "# # calling the shutil.copytree() method and\n",
-    "# # passing the src,dst,and ignore parameter\n",
-    "# ! the file must be outside of path_study, otherwise it will be recursively copied\n",
-    "# ! Copying from EOS is a very lenghty process\n",
-    "path_EOS = \"/eos/home-c/cdroin/save_simulations/\"\n",
-    "path_archive = path_EOS + STUDY_NAME\n",
-    "print('Start copying file, this may take a while...')\n",
-    "shutil.copytree(path_study,\n",
-    "                path_archive,\n",
-    "                ignore=ignore_files)"
+    "        return l_files_to_ignore\n",
+    "    \n",
+    "\n",
+    "    # # calling the shutil.copytree() method and\n",
+    "    # # passing the src,dst,and ignore parameter\n",
+    "    # ! the file must be outside of path_study, otherwise it will be recursively copied\n",
+    "    # ! Copying from EOS is a very lenghty process\n",
+    "    path_EOS = \"/eos/home-c/cdroin/save_simulations/\"\n",
+    "    path_archive = path_EOS + STUDY_NAME\n",
+    "    print('Start copying file, this may take a while...')\n",
+    "    shutil.copytree(path_study,\n",
+    "                    path_archive,\n",
+    "                    ignore=ignore_files)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/eos/home-c/cdroin/save_simulations/opt_flathv_75_1500_withBB_chroma15_b1891_octscan.zip'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Convert the archive to a zip file, and export to EOS\n",
-    "shutil.make_archive(path_archive,\n",
-    "                    'zip',\n",
-    "                    path_EOS,\n",
-    "                    path_archive.split('/')[-1])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "[Errno 39] Directory not empty: 'opt_flathv_75_1500_withBB_chroma15_b1891_octscan'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Delete the folder archive\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m shutil\u001b[39m.\u001b[39;49mrmtree(path_archive)\n",
-      "File \u001b[0;32m/afs/cern.ch/work/c/cdroin/private/DA_study/miniconda/lib/python3.10/shutil.py:725\u001b[0m, in \u001b[0;36mrmtree\u001b[0;34m(path, ignore_errors, onerror)\u001b[0m\n\u001b[1;32m    723\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    724\u001b[0m     \u001b[39mif\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39msamestat(orig_st, os\u001b[39m.\u001b[39mfstat(fd)):\n\u001b[0;32m--> 725\u001b[0m         _rmtree_safe_fd(fd, path, onerror)\n\u001b[1;32m    726\u001b[0m         \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    727\u001b[0m             os\u001b[39m.\u001b[39mclose(fd)\n",
-      "File \u001b[0;32m/afs/cern.ch/work/c/cdroin/private/DA_study/miniconda/lib/python3.10/shutil.py:664\u001b[0m, in \u001b[0;36m_rmtree_safe_fd\u001b[0;34m(topfd, path, onerror)\u001b[0m\n\u001b[1;32m    662\u001b[0m         os\u001b[39m.\u001b[39mrmdir(entry\u001b[39m.\u001b[39mname, dir_fd\u001b[39m=\u001b[39mtopfd)\n\u001b[1;32m    663\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mOSError\u001b[39;00m:\n\u001b[0;32m--> 664\u001b[0m         onerror(os\u001b[39m.\u001b[39;49mrmdir, fullname, sys\u001b[39m.\u001b[39;49mexc_info())\n\u001b[1;32m    665\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    666\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    667\u001b[0m         \u001b[39m# This can only happen if someone replaces\u001b[39;00m\n\u001b[1;32m    668\u001b[0m         \u001b[39m# a directory with a symlink after the call to\u001b[39;00m\n\u001b[1;32m    669\u001b[0m         \u001b[39m# os.scandir or stat.S_ISDIR above.\u001b[39;00m\n",
-      "File \u001b[0;32m/afs/cern.ch/work/c/cdroin/private/DA_study/miniconda/lib/python3.10/shutil.py:662\u001b[0m, in \u001b[0;36m_rmtree_safe_fd\u001b[0;34m(topfd, path, onerror)\u001b[0m\n\u001b[1;32m    660\u001b[0m     os\u001b[39m.\u001b[39mclose(dirfd)\n\u001b[1;32m    661\u001b[0m     dirfd_closed \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m--> 662\u001b[0m     os\u001b[39m.\u001b[39;49mrmdir(entry\u001b[39m.\u001b[39;49mname, dir_fd\u001b[39m=\u001b[39;49mtopfd)\n\u001b[1;32m    663\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mOSError\u001b[39;00m:\n\u001b[1;32m    664\u001b[0m     onerror(os\u001b[39m.\u001b[39mrmdir, fullname, sys\u001b[39m.\u001b[39mexc_info())\n",
-      "\u001b[0;31mOSError\u001b[0m: [Errno 39] Directory not empty: 'opt_flathv_75_1500_withBB_chroma15_b1891_octscan'"
-     ]
-    }
-   ],
-   "source": [
-    "# Delete the folder archive\n",
-    "shutil.rmtree(path_archive)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if SAVE_STUDY_EOS:\n",
+    "\n",
+    "    # Convert the archive to a zip file, and export to EOS\n",
+    "    shutil.make_archive(path_archive,\n",
+    "                        'zip',\n",
+    "                        path_EOS,\n",
+    "                        path_archive.split('/')[-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if SAVE_STUDY_EOS:\n",
+    "    # Delete the folder archive\n",
+    "    shutil.rmtree(path_archive)"
+   ]
   }
  ],
  "metadata": {
